@@ -2,17 +2,21 @@ use super::def::InteractableItem;
 
 /// The mirror.
 pub const MIRROR: InteractableItem = InteractableItem {
-    lore: 4,
+    item_lore: 4,
+    spell_lore: 18
 };
 /// Bed in players room.
 pub const BED: InteractableItem = InteractableItem {
-    lore: 3,
+    item_lore: 3,
+    spell_lore: 17
 };
 /// Map of the dorm.
 pub const DORMMAP: InteractableItem = InteractableItem {
-    lore: 5
+    item_lore: 5,
+    spell_lore: 19
 };
 // Map of the school.
 pub const CAMPUSSQUAREMAP: InteractableItem = InteractableItem {
-    lore: 6
+    item_lore: 6,
+    spell_lore: 20
 };
